Updated the mobile layout responsive bug- horizontal overflow bug fix

--- a/css/style.css
+++ b/css/style.css
@@ -7581,6 +7581,9 @@ h1, .h1 {
 
 .slick-next {
   right: -35px !important; }
+  @media (max-width: 26.62em) {
+    .slick-next {
+      display: none !important; } }
 
 .slick-prev {
   left: -40px !important; }
